maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:78: error: '=' expected but ',' found.
def rechercheASuivre():Int,Int = {
                          ^JediEscaper:97: error: illegal start of simple expression
	def aBiscuit(x:Int, y:Int):Boolean = hasBaggle(x,y)
^